--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robofriends",
-  "homepage": "https://antrikshmalik.github.io/robofriends",
+  "homepage": "https://antrikshmalik.github.io/robofriends_new",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
